<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet1"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:background="@android:color/white"
    android:clipToPadding="true"
    android:fillViewport="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="4"
            app:cardBackgroundColor="#ffffff"
            app:cardCornerRadius="5dp"
            app:cardElevation="6dp"
            app:cardPreventCornerOverlap="true">

            <LinearLayout
                android:id="@+id/tap_action_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:drawable/list_selector_background"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_directions_walk_black_24dp"
                    android:contentDescription="@string/user_s_current_activity_walking_or_still_or_driving"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/infotext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/no_status_yet"
                    android:textSize="15sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="4"
            app:cardBackgroundColor="#ffffff"
            app:cardCornerRadius="5dp"
            app:cardElevation="6dp"
            app:cardPreventCornerOverlap="true">

            <LinearLayout
                android:id="@+id/tap_action_layout_destination"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:drawable/list_selector_background"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/destination_imageview"
                    android:src="@drawable/ic_place_black_24dp"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/destination_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/destination"

                    android:textSize="15sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="4"
            app:cardBackgroundColor="#ffffff"
            app:cardCornerRadius="5dp"
            app:cardElevation="6dp"
            app:cardPreventCornerOverlap="true">

            <LinearLayout
                android:id="@+id/tap_action_layout_share"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:drawable/list_selector_background"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/Share_imageview"
                    android:src="@drawable/ic_share_black_24dp"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/share_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/share"
                    android:textSize="15sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>