<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet1"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:background="@android:color/white"
    android:clipToPadding="true"

    android:fillViewport="true"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#ffffff"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="true">

            <LinearLayout
                android:id="@+id/tap_action_layout_share"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@android:drawable/list_selector_background"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/shareactivity_imageview"
                    android:foregroundGravity="center"
                    android:src="@drawable/ic_share_black_24dp"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/share_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/share"
                    android:textSize="15sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fromdatetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/from"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/todatetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/to"
                android:textSize="25sp" />
        </LinearLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:scrollbars="vertical">

        </android.support.v7.widget.RecyclerView>

        <ImageButton
            android:id="@+id/imageButton_deletewithfromto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/list_selector_background"
            android:tint="@android:color/holo_red_dark"
            app:srcCompat="@android:drawable/ic_menu_delete" />


    </LinearLayout>


</ScrollView>